<resources>
    <string name="app_name">Caixa Kioske</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="usuario">Usuário</string>
    <string name="senha">senha</string>
    <string name="Login">Login</string>
    <string name="Criar_uma_nova_conta">Criar uma nova conta</string>
    <string name="Registar">Registar</string>
    <string name="Email">Email</string>
    <string name="Nome">Nome</string>
    <string name="Comidas">Comidas</string>
    <string name="Bebidas">Bebidas</string>
    <string name="outros">Outros</string>
    <string name="Pre_o">Preço</string>
    <string name="novo_item">Novo Item</string>
    <string name="Produtos">Produtos</string>
    <string name="Cadastrar">Cadastrar</string>
    <string name="Cadastrar_Produto">Cadastrar Produto</string>
    <string name="Pedido">Pedido</string>
    <string name="Cadastro_Mesa">Cadastro Mesa</string>
    <string name="Categorias">Categorias</string>
    <string name="Mesa">Mesa</string>
    <string name="Mesas">Mesas</string>
    <string name="Pedidos">Pedidos</string>
    <string name="nomeProduto">NomeProduto</string>
    <string name="_2_60">2,60</string>
    <string name="Nome_Mesa">Nome Mesa</string>
    <string name="Valor">Valor</string>
    <string name="Filtrar">Filtrar</string>
    <string name="Kioske">Kioske</string>
    <string name="Caixa">Caixa</string>
    <string name="Editar_Produto">Editar Produto</string>
    <string name="Salvar">Salvar</string>
    <string name="Op_es">Opções</string>
    <string name="Excluir">Excluir</string>
    <string name="Cancelar">Cancelar</string>
    <string name="MensagemExcluir">Deseja realmente excluir o objeto?</string>
    <string name="Historico">Historico</string>
    <string name="Editar_Mesa">Editar Mesa</string>
    <string name="Mensagem_Pedido">Selecione uma Quantidade</string>
    <string name="Adicionar">Adicionar</string>
    <string name="Pedir" />
    <string name="Painel_Admin">Painel Admin</string>
    <string name="Painel_Gar_om">Painel Garçom</string>
    <string name="Voltar">Voltar</string>
    <string name="R">R$</string>
    <string name="Conta">Conta</string>
    <string name="Dados">Dados</string>
    <string name="Trocar_Senha">Trocar Senha</string>
    <string name="Logout">Logout</string>
    <string name="Cadastro_Pedido">Cadastro Pedido</string>
    <string name="Email_dois_pontos">Email:</string>
    <string name="dados_do_usu_rio">Dados do Usuário</string>
    <string name="email">Email:</string>
    <string name="acesso">Acesso:</string>
    <string name="Opcional">Opcional</string>
    <string name="ver_pedido">Ver Pedido</string>
    <string name="pedidonum">PedidoNum</string>
    <string name="fazer_pedido">Fazer Pedido</string>
</resources>
