<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3DA507"
    tools:context=".Telas_Cadastros.CadastroProduto">

    <TextView
        android:id="@+id/tvCadastrarProduto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="58dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="58dp"
        android:text="@string/Cadastrar_Produto"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etNomeProduto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="99dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="99dp"
        android:ems="10"
        android:hint="@string/Nome"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCadastrarProduto" />

    <RadioGroup
        android:id="@+id/rgTipo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNomeProduto">

        <RadioButton
            android:id="@+id/rbComidas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/Comidas" />

        <RadioButton
            android:id="@+id/rbBebidas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Bebidas" />

        <RadioButton
            android:id="@+id/rbOutros"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Kioske" />
    </RadioGroup>

    <EditText
        android:id="@+id/etPreco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="99dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="99dp"
        android:ems="10"
        android:hint="@string/Pre_o"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgTipo" />

    <Button
        android:id="@+id/btnCadastrarProduto"
        android:layout_width="343dp"
        android:layout_height="49dp"
        android:layout_marginStart="161dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="162dp"
        android:text="@string/Cadastrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPreco" />

</androidx.constraintlayout.widget.ConstraintLayout>