<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3DA507"
    tools:context=".TelasCadastros.EditarProduto">

    <TextView
        android:id="@+id/tvEditarProduto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="45dp"
        android:text="@string/Editar_Produto"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etEditNomeProduto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="54dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="53dp"
        android:ems="10"
        android:hint="@string/Nome"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEditarProduto" />

    <RadioGroup
        android:id="@+id/rgEditTipo"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEditNomeProduto">

        <RadioButton
            android:id="@+id/rbEditComidas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Comidas"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/rbEditBebidas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Bebidas"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/rbEditOutros"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Kioske"
            android:textSize="15sp" />
    </RadioGroup>

    <EditText
        android:id="@+id/etEditPrecoProduto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="102dp"
        android:ems="10"
        android:hint="@string/Pre_o"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgEditTipo" />

    <Button
        android:id="@+id/btnEditarProduto"
        android:layout_width="244dp"
        android:layout_height="50dp"
        android:layout_marginStart="83dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="84dp"
        android:text="@string/Salvar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEditPrecoProduto" />
</androidx.constraintlayout.widget.ConstraintLayout>