<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3DA507"
    tools:context=".DadosUsuario">

    <TextView
        android:id="@+id/tvDadosUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="42dp"
        android:text="@string/dados_do_usu_rio"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvEmailDados"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginTop="46dp"
        android:text="@string/email"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDadosUsuario" />

    <TextView
        android:id="@+id/tvAcessoDados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="203dp"
        android:text="@string/acesso"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEmailDados" />

    <Button
        android:id="@+id/btnVoltar"
        android:layout_width="219dp"
        android:layout_height="44dp"
        android:layout_marginStart="51dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="50dp"
        android:text="@string/Voltar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAcessoDados" />
</androidx.constraintlayout.widget.ConstraintLayout>