<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3DA507"
    tools:context=".Categorias">

    <TextView
        android:id="@+id/tvCategorias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="73dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="73dp"
        android:text="@string/Categorias"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnComidas"
        android:layout_width="236dp"
        android:layout_height="58dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="42dp"
        android:text="@string/Comidas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCategorias" />

    <Button
        android:id="@+id/btnBebidas"
        android:layout_width="236dp"
        android:layout_height="58dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="42dp"
        android:text="@string/Bebidas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnComidas" />

    <Button
        android:id="@+id/btnOutros"
        android:layout_width="236dp"
        android:layout_height="58dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="118dp"
        android:text="@string/Kioske"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBebidas" />
</androidx.constraintlayout.widget.ConstraintLayout>