<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3DA507"
    tools:context=".TelasCadastros.EditarMesa">


    <TextView
        android:id="@+id/tvEditarMesa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="65dp"
        android:text="@string/Editar_Mesa"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etEditNomeMesa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="54dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="53dp"
        android:ems="10"
        android:hint="@string/Nome"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEditarMesa" />

    <EditText
        android:id="@+id/etEditPrecoMesa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="54dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="53dp"
        android:ems="10"
        android:hint="@string/Pre_o"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEditNomeMesa" />

    <Button
        android:id="@+id/btnEditarMesa"
        android:layout_width="244dp"
        android:layout_height="50dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="141dp"
        android:text="@string/Salvar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEditPrecoMesa" />

</androidx.constraintlayout.widget.ConstraintLayout>