<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3DA507"
    tools:context=".PainelGarcom">

    <Button
        android:id="@+id/btnMesasGarcom"
        android:layout_width="253dp"
        android:layout_height="62dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="33dp"
        android:text="@string/Mesas"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPainelGarcom" />

    <Button
        android:id="@+id/btnHistoricoGarcom"
        android:layout_width="253dp"
        android:layout_height="62dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="33dp"
        android:text="@string/Historico"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMesasGarcom" />

    <TextView
        android:id="@+id/tvPainelGarcom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="63dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="62dp"
        android:text="@string/Painel_Gar_om"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>